Hygieia_UI/UI/src/app/css/detailedView.less
@import (reference) 'variables';
@import (reference) 'mixins';



.detailed-view-page {
     background:#efefef;
     .header-terms{
        .first-col{
            padding-left:27px !important;
            font-size:18px;
        }
        .second-col{
            padding-left:15px !important;
            font-size:18px;
        }
        .third-col{
            padding-left:3px !important;
            font-size:18px;

        }
     }   
    .layout-maindiv {
        padding-left: 0px;
        .styling-values {
            font-size: 29px;
            font-weight:400;
            color:#000;
        }
        .layout-calcs {
            padding: 4px;
            width: 30%;
            margin-left: 2%;
            height:114px;
            .circle-props {
            width: 27px;
            height: 27px;
            border-radius: 50px;
            background: #D7061A;
            color: #fff;
            font-size: 18px;
            font-weight: 400;
            padding: 1px 9px;
           
            }
             .circle-props-green {
            width: 27px;
            height: 27px;
            border-radius: 50px;
            background: #00AA00;
            color: #fff;
            font-size: 18px;
            font-weight: 400;
            padding: 1px 9px;
            }
             .circle-props-yellow {
            width: 27px;
            height: 27px;
            border-radius: 50px;
            background: #FFFF00;
            color: #000;
            font-size: 18px;
            font-weight: 400;
            padding: 1px 9px;
            }
            .widget-headers{
            	font-size:16px;
            	color:#0071BC;
                padding-left:18px;
                font-weight: 600;
                
            }
            .label-props{
            	font-size:12px;
            }
            .widget-inner-spacing{
            	padding-top:4px;
            		
            }
            .widget-value-pro{
            			font-size:25px;
            			font-weight:400;
            			color:#0047b3;
                        text-align: -webkit-center;
                        padding-top: 10%;
            		}
            .widget-value-pro-small{
                        font-size:15px;
                        font-weight:400;
                        color:#0047b3;
                    }
        }
    }
}

